--- a/website.css
+++ b/website.css
@@ -1,3 +1,8 @@
+@font-face{
+    font-family: turretroad;
+    src: url(fonts/fonts/Turret_Road/TurretRoad-Regular.ttf)
+}
+
 html {
     height: 100%;
 }
