--- a/website.css
+++ b/website.css
@@ -73,7 +73,7 @@ header {
   
 }
 nav {
-    background-color: #004d99;
+    background-color: #3b4a67;
     padding: 3px;
     text-align: center;
     color:white;
@@ -113,7 +113,7 @@ iframe {
 
 footer {
     text-align: center;
-    background-color: #004d99;
+    background-color: #3b4a67;
     color: white;
     padding: 5px;
     font-family: turret road;
