--- a/website.css
+++ b/website.css
@@ -28,7 +28,7 @@ body {
 
 
 h1{
-    margin:5pt;
+    margin: 20pt;
     margin-left: 50pt;
     margin-right: 50pt;
 }
@@ -46,7 +46,7 @@ p {
 h2 {
     text-align: center;
     font-size: 35pt;
-    margin: 20pt;
+    margin: 27pt;
     margin-left: 80pt;
     margin-right: 80pt;
     color: white;
@@ -72,6 +72,11 @@ header {
     color: white;
   
 }
+
+h4 {
+    margin: auto;
+}
+
 nav {
     background-color: #3b4a67;
     padding: 3px;
@@ -106,7 +111,7 @@ nav ul{
 }
 
 iframe { 
-    margin: 10px;
+    margin: 20px;
     align-items: center;
     display: inline-block;
 }
